<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>ci_example</name>
  <version>1.0.0</version>
  <description>
    collection of examples of python demos and unit tests,
    in implementations suitable for continuous integration
  </description>
  
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--build_depend>roscpp</build_depend-->
  <!--build_depend>rostest</build_depend-->
  <!--build_depend>std_msgs</build_depend-->
  
  <depend>mpi_cmake_modules</depend>
  <depend>pybind11_vendor</depend>
  <depend>yaml_utils</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_nose</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
