<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>test_bench</name>
  <version>1.0.0</version>
  <description>
    collection of examples of python demos and unit tests,
    in implementations suitable for continuous integration
  </description>
  
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>mpi_cmake_modules</buildtool_depend>
  
  <depend>real_time_tools</depend>
  <depend>mim_msgs</depend>
  <depend>master_board_sdk</depend>
  <depend>Eigen3</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml_utils</depend>
  <depend>dynamic_graph_manager</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_nose</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
